[tool.poetry]
name = "tasks_queue"
version = "0.0.1"
description = ""
authors = ["andrey.maltsev <mail@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
